--- a/app/src/main/res/layout/orientation_activity.xml
+++ b/app/src/main/res/layout/orientation_activity.xml
@@ -21,6 +21,23 @@
         android:layout_height="0dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
+        android:layout_weight=".3">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/barCode"
+            android:text="barCode"
+            android:textSize="18sp"
+            android:textColor="#000000"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
         android:layout_weight=".5">
 
         <TextView
